[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instant-policy"
version = "0.1.0"
description = "Instant Policy: In-Context Imitation Learning via Graph Diffusion"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Vitalis Vosylius"},
]
keywords = ["robotics", "imitation learning", "graph diffusion", "policy learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "open3d>=0.18.0",
    "pytorch-lightning>=2.4.0",
    "lightning>=2.4.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.9.0",
    "pyyaml>=6.0.0",
    "diffusers>=0.31.0",
    "transformers>=4.46.0",
    "accelerate>=1.1.0",
    "pyquaternion>=0.9.9",
    "pandas>=2.2.0",
    "torch-geometric>=2.5.0",
    "torch-scatter>=2.1.0",
    "torch-cluster>=1.6.0",
]

[project.optional-dependencies]
sim = [
    "rlbench",  # For RLBench simulation tasks
]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://www.robot-learning.uk/instant-policy"
Repository = "https://github.com/vv19/instant_policy"

[tool.setuptools]
packages = ["instant_policy"]

[tool.setuptools.package-data]
instant_policy = ["*.so", "*.pyi", "py.typed"]
